--- a/index.html
+++ b/index.html
@@ -9,5 +9,39 @@
 </head>
 <body>
     
+    <!-- contenitore pagina -->
+    <div class="container">
+
+        <!-- header -->
+        <header>
+            <div class="header-top"></div>
+            <div class="header-bottom"></div>
+        </header>
+        <!-- /header -->
+
+
+
+        <!-- main -->
+        <main>
+            <div class="main-title"></div>
+            <aside class="col-left"></aside>
+            <div class="main-content"></div>
+            <aside class="col-right"></aside>
+        </main>
+        <!-- /main -->
+
+
+
+        <!-- footer -->
+        <footer>
+
+        </footer>
+        <!-- /footer -->
+
+
+
+    </div>
+    <!-- /contenitore pagina -->
+
 </body>
 </html>
