--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         <!-- header -->
         <header>
-            <div class="header-top"></div>
-            <div class="header-bottom"></div>
+            <div class="header-top mb-20 debug"></div>
+            <div class="header-bottom mb-20 debug"></div>
         </header>
         <!-- /header -->
 
