--- a/index.html
+++ b/index.html
@@ -13,20 +13,33 @@
     <div class="container">
 
         <!-- header -->
-        <header>
-            <div class="header-top mb-20 debug"></div>
-            <div class="header-bottom mb-20 debug"></div>
+        <header class="debug">
+            <div class="header-top mb-20"></div>
+            <div class="header-bottom mb-20"></div>
         </header>
         <!-- /header -->
 
 
 
         <!-- main -->
-        <main>
-            <div class="main-title"></div>
-            <aside class="col-left"></aside>
-            <div class="main-content"></div>
-            <aside class="col-right"></aside>
+        <main class="clearfix debug">
+
+            <!-- titolo pagina -->
+            <div class="main-title mb-20"></div>
+            <!-- /titolo pagina -->
+
+            <!-- colonna sinistra -->
+            <aside class="col-left float-left mr-2"></aside>
+            <!-- /colonna sinistra -->
+
+            <!-- colonna centrale -->
+            <div class="main-content float-left mr-2"></div>
+            <!-- /colonna centrale -->
+
+            <!-- colonna destra -->
+            <aside class="col-right float-left mb-20"></aside>
+            <!-- /colonna destra -->
+
         </main>
         <!-- /main -->
 
