--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     
     <!-- contenitore pagina -->
-    <div class="container">
+    <div class="container debug">
 
         <!-- header -->
-        <header class="debug">
+        <header>
             <div class="header-top mb-20"></div>
             <div class="header-bottom mb-20"></div>
         </header>
@@ -22,22 +22,22 @@
 
 
         <!-- main -->
-        <main class="clearfix debug">
+        <main class="clearfix">
 
             <!-- titolo pagina -->
             <div class="main-title mb-20"></div>
             <!-- /titolo pagina -->
 
             <!-- colonna sinistra -->
-            <aside class="col-left float-left mr-2"></aside>
+            <aside class="col-left float"></aside>
             <!-- /colonna sinistra -->
 
             <!-- colonna centrale -->
-            <div class="main-content float-left mr-2"></div>
+            <div class="main-content float"></div>
             <!-- /colonna centrale -->
 
             <!-- colonna destra -->
-            <aside class="col-right float-left mb-20"></aside>
+            <aside class="col-right float mb-20"></aside>
             <!-- /colonna destra -->
 
         </main>
@@ -46,7 +46,7 @@
 
 
         <!-- footer -->
-        <footer class="debug">
+        <footer>
 
         </footer>
         <!-- /footer -->
